adding one plot

--- a/notebooks/TSA.ipynb
+++ b/notebooks/TSA.ipynb
@@ -84,7 +84,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5600b818b90d4c018577d4e36c24d8e1",
+       "model_id": "cfd9cf0ec0f3487c809bdbed68528e66",
        "version_major": 2,
        "version_minor": 0
       },
@@ -97,89 +97,89 @@
     }
    ],
    "source": [
-    "# # -*- coding: utf-8 -*-\n",
-    "# \"\"\"\n",
-    "# Created on Sat Sep 19 11:59:33 2020\n",
+    "# -*- coding: utf-8 -*-\n",
+    "\"\"\"\n",
+    "Created on Sat Sep 19 11:59:33 2020\n",
     "\n",
-    "# @author: Gokul\n",
-    "# \"\"\"\n",
+    "@author: Gokul\n",
+    "\"\"\"\n",
     "\n",
-    "# # import headers\n",
-    "# import pandas as pd\n",
+    "# import headers\n",
+    "import pandas as pd\n",
     "# from pathlib import *\n",
-    "# #for ploting\n",
-    "# #interactive dropdown\n",
-    "# import ipywidgets as widgets\n",
-    "# from ipywidgets import Layout, Button, Box, VBox, HBox, Output, ToggleButtons, HTML\n",
-    "# from IPython.display import display\n",
-    "# from bqplot.interacts import (\n",
-    "#     FastIntervalSelector, IndexSelector, BrushIntervalSelector,\n",
-    "#     BrushSelector, MultiSelector, LassoSelector, PanZoom, HandDraw\n",
-    "# )\n",
-    "# from traitlets import link\n",
+    "#for ploting\n",
+    "#interactive dropdown\n",
+    "import ipywidgets as widgets\n",
+    "from ipywidgets import Layout, Button, Box, VBox, HBox, Output, ToggleButtons, HTML\n",
+    "from IPython.display import display\n",
+    "from bqplot.interacts import (\n",
+    "    FastIntervalSelector, IndexSelector, BrushIntervalSelector,\n",
+    "    BrushSelector, MultiSelector, LassoSelector, PanZoom, HandDraw\n",
+    ")\n",
+    "from traitlets import link\n",
     "# import seaborn as sns\n",
-    "# from datetime import datetime as py_dtime\n",
-    "# import numpy as np\n",
-    "# import bqplot.pyplot as plt\n",
-    "# from bqplot import DateScale, LinearScale, Axis, Lines, Scatter, Bars, Hist, Figure\n",
+    "from datetime import datetime as py_dtime\n",
+    "import numpy as np\n",
+    "import bqplot.pyplot as plt\n",
+    "from bqplot import DateScale, LinearScale, Axis, Lines, Scatter, Bars, Hist, Figure\n",
     "\n",
-    "# # import matplotlib.pyplot as plt\n",
-    "# # Use seaborn style defaults and set the default figure size\n",
-    "# sns.set(rc={'figure.figsize':(20, 4)})\n",
+    "# import matplotlib.pyplot as plt\n",
+    "# Use seaborn style defaults and set the default figure size\n",
+    "sns.set(rc={'figure.figsize':(20, 4)})\n",
     "\n",
-    "# # create the folder path \n",
+    "# create the folder path \n",
     "\n",
-    "# # Have to update the file path based on the PC you are running the code\n",
-    "# # folder_name = \"\\OneDrive - Swinburne University\\Gokul\\PhD\\Research\\Time_series_analysis_VU\\Data\\\\\"\n",
-    "# airport_file_name = \"MELBOURNE AIRPORT_Data.csv\"\n",
-    "# # airport_file_path=str(Path.home()) + str(folder_name) + str(airport_file_name)\n",
-    "# # printing the File path to make sure it is right\n",
-    "# # print(file_path)\n",
-    "# # Read csv file\n",
-    "# airport_data = pd.read_csv(airport_file_name)\n",
-    "# # display(Rural_data)\n",
-    "# #filter the data from 1990 to 2020\n",
-    "# airport_data=airport_data[airport_data.Year>1990]\n",
-    "# airport_data=airport_data[airport_data.Year<2015]\n",
-    "# # display(Rural_data)\n",
-    "# # # iterating the columns \n",
-    "# # for col in Rural_data.columns: \n",
-    "# #     print(col)\n",
+    "# Have to update the file path based on the PC you are running the code\n",
+    "# folder_name = \"\\OneDrive - Swinburne University\\Gokul\\PhD\\Research\\Time_series_analysis_VU\\Data\\\\\"\n",
+    "airport_file_name = \"MELBOURNE AIRPORT_Data.csv\"\n",
+    "# airport_file_path=str(Path.home()) + str(folder_name) + str(airport_file_name)\n",
+    "# printing the File path to make sure it is right\n",
+    "# print(file_path)\n",
+    "# Read csv file\n",
+    "airport_data = pd.read_csv(airport_file_name)\n",
+    "# display(Rural_data)\n",
+    "#filter the data from 1990 to 2020\n",
+    "airport_data=airport_data[airport_data.Year>1990]\n",
+    "airport_data=airport_data[airport_data.Year<2015]\n",
+    "# display(Rural_data)\n",
+    "# # iterating the columns \n",
+    "# for col in Rural_data.columns: \n",
+    "#     print(col)\n",
     "\n",
-    "# # Rename the collumn header for ease of use\n",
-    "# # data=read_file.rename(columns={\" Year Month Day Hour Minutes in YYYY\": \"year\",\n",
-    "# #                                   \"MM\": \"month\",\n",
-    "# #                                   \"DD\": \"day\",\n",
-    "# #                                   \"HH24\":\"hour\",\n",
-    "# #                                   \"MI format in Local standard time\": \"minute\",\n",
-    "# #                                   \"Air Temperature in degrees Celsius\": \"temp\",                               \n",
-    "# #                                  })\n",
-    "# airport_Temp_data=airport_data.rename(columns={\"Maximum temperature (Degree C)\": \"Airport_temp\",                               \n",
+    "# Rename the collumn header for ease of use\n",
+    "# data=read_file.rename(columns={\" Year Month Day Hour Minutes in YYYY\": \"year\",\n",
+    "#                                   \"MM\": \"month\",\n",
+    "#                                   \"DD\": \"day\",\n",
+    "#                                   \"HH24\":\"hour\",\n",
+    "#                                   \"MI format in Local standard time\": \"minute\",\n",
+    "#                                   \"Air Temperature in degrees Celsius\": \"temp\",                               \n",
     "#                                  })\n",
-    "# #creating the date as a datetime\n",
+    "airport_Temp_data=airport_data.rename(columns={\"Maximum temperature (Degree C)\": \"Airport_temp\",                               \n",
+    "                                 })\n",
+    "#creating the date as a datetime\n",
     "\n",
-    "# airport_Temp_data['Date'] = pd.to_datetime(airport_Temp_data[['Year','Month','Day']])\n",
-    "# #collumns to filter\n",
-    "# collist=['Date','Airport_temp']\n",
-    "# airport_Temp_data = airport_Temp_data[collist]\n",
-    "# #set datetime as index\n",
-    "# airport_Temp_data = airport_Temp_data.set_index('Date')\n",
-    "# airport_Temp_data['Airport_temp'] = pd.to_numeric(airport_Temp_data['Airport_temp'], downcast=\"float\",errors='coerce')\n",
-    "# # display(airport_Temp_data)\n",
-    "# #plot the data\n",
-    "# # airport_plot = airport_Temp_data.plot(title=\"Airport Temp Plot\");\n",
-    "# # airport_plot.set_ylabel('Temp (degC)');\n",
-    "# # airport_plot.set_xlabel('Date');\n",
-    "# #interactive plot\n",
-    "# xs_pz = DateScale(min=np.datetime64(py_dtime(1991, 1, 1)))\n",
-    "# ys_pz = LinearScale()\n",
-    "# line_pz_1 = Lines(x=airport_Temp_data.index.values, y=airport_Temp_data, scales={'x': xs_pz, 'y': ys_pz}, colors=['blue'])\n",
+    "airport_Temp_data['Date'] = pd.to_datetime(airport_Temp_data[['Year','Month','Day']])\n",
+    "#collumns to filter\n",
+    "collist=['Date','Airport_temp']\n",
+    "airport_Temp_data = airport_Temp_data[collist]\n",
+    "#set datetime as index\n",
+    "airport_Temp_data = airport_Temp_data.set_index('Date')\n",
+    "airport_Temp_data['Airport_temp'] = pd.to_numeric(airport_Temp_data['Airport_temp'], downcast=\"float\",errors='coerce')\n",
+    "# display(airport_Temp_data)\n",
+    "#plot the data\n",
+    "# airport_plot = airport_Temp_data.plot(title=\"Airport Temp Plot\");\n",
+    "# airport_plot.set_ylabel('Temp (degC)');\n",
+    "# airport_plot.set_xlabel('Date');\n",
+    "#interactive plot\n",
+    "xs_pz = DateScale(min=np.datetime64(py_dtime(1991, 1, 1)))\n",
+    "ys_pz = LinearScale()\n",
+    "line_pz_1 = Lines(x=airport_Temp_data.index.values, y=airport_Temp_data, scales={'x': xs_pz, 'y': ys_pz}, colors=['blue'])\n",
     "\n",
-    "# panzoom = PanZoom(scales={'x': [xs_pz]})\n",
-    "# xax = Axis(scale=xs_pz, label='Date', grids='off')\n",
-    "# yax = Axis(scale=ys_pz, label='Temp (degC)', orientation='vertical', grid_lines='none')\n",
+    "panzoom = PanZoom(scales={'x': [xs_pz]})\n",
+    "xax = Axis(scale=xs_pz, label='Date', grids='off')\n",
+    "yax = Axis(scale=ys_pz, label='Temp (degC)', orientation='vertical', grid_lines='none')\n",
     "\n",
-    "# Figure(marks=[line_pz_1], axes=[xax, yax], interaction=panzoom, title='Melbourne Airport Air Temp')"
+    "Figure(marks=[line_pz_1], axes=[xax, yax], interaction=panzoom, title='Melbourne Airport Air Temp')"
    ]
   },
   {
