--- a/notebooks/TSA.ipynb
+++ b/notebooks/TSA.ipynb
@@ -78,13 +78,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cfd9cf0ec0f3487c809bdbed68528e66",
+       "model_id": "babe279ce7f7475fb0a56d924135c786",
        "version_major": 2,
        "version_minor": 0
       },
@@ -117,7 +117,7 @@
     "    BrushSelector, MultiSelector, LassoSelector, PanZoom, HandDraw\n",
     ")\n",
     "from traitlets import link\n",
-    "# import seaborn as sns\n",
+    "import seaborn as sns\n",
     "from datetime import datetime as py_dtime\n",
     "import numpy as np\n",
     "import bqplot.pyplot as plt\n",
@@ -203,56 +203,56 @@
     }
    ],
    "source": [
-    "# reg_off_file_name = \"MELBOURNE REGIONAL OFFICE_Data.csv\"\n",
-    "# # reg_off_file_path=str(Path.home()) + str(folder_name) + str(reg_off_file_name)\n",
-    "# # printing the File path to make sure it is right\n",
-    "# # print(file_path)\n",
-    "# # Read csv file\n",
-    "# reg_off_data = pd.read_csv(reg_off_file_name)\n",
-    "# # display(urban_1_data)\n",
-    "# #filter the data from 1990 to 2020\n",
-    "# reg_off_data=reg_off_data[reg_off_data.Year>1990]\n",
-    "# # this data set has only values recorded \n",
-    "# reg_off_data=reg_off_data[reg_off_data.Year<2015]\n",
-    "# # display(urban_1_data)\n",
-    "# # # iterating the columns \n",
-    "# # for col in Rural_data.columns: \n",
-    "# #     print(col)\n",
+    "reg_off_file_name = \"MELBOURNE REGIONAL OFFICE_Data.csv\"\n",
+    "# reg_off_file_path=str(Path.home()) + str(folder_name) + str(reg_off_file_name)\n",
+    "# printing the File path to make sure it is right\n",
+    "# print(file_path)\n",
+    "# Read csv file\n",
+    "reg_off_data = pd.read_csv(reg_off_file_name)\n",
+    "# display(urban_1_data)\n",
+    "#filter the data from 1990 to 2020\n",
+    "reg_off_data=reg_off_data[reg_off_data.Year>1990]\n",
+    "# this data set has only values recorded \n",
+    "reg_off_data=reg_off_data[reg_off_data.Year<2015]\n",
+    "# display(urban_1_data)\n",
+    "# # iterating the columns \n",
+    "# for col in Rural_data.columns: \n",
+    "#     print(col)\n",
     "\n",
-    "# # Rename the collumn header for ease of use\n",
-    "# # data=read_file.rename(columns={\" Year Month Day Hour Minutes in YYYY\": \"year\",\n",
-    "# #                                   \"MM\": \"month\",\n",
-    "# #                                   \"DD\": \"day\",\n",
-    "# #                                   \"HH24\":\"hour\",\n",
-    "# #                                   \"MI format in Local standard time\": \"minute\",\n",
-    "# #                                   \"Air Temperature in degrees Celsius\": \"temp\",                               \n",
-    "# #                                  })\n",
-    "# reg_off_Temp_data=reg_off_data.rename(columns={\"Maximum temperature (Degree C)\": \"Reg_office_temp\",                               \n",
+    "# Rename the collumn header for ease of use\n",
+    "# data=read_file.rename(columns={\" Year Month Day Hour Minutes in YYYY\": \"year\",\n",
+    "#                                   \"MM\": \"month\",\n",
+    "#                                   \"DD\": \"day\",\n",
+    "#                                   \"HH24\":\"hour\",\n",
+    "#                                   \"MI format in Local standard time\": \"minute\",\n",
+    "#                                   \"Air Temperature in degrees Celsius\": \"temp\",                               \n",
     "#                                  })\n",
-    "# #creating the date as a datetime\n",
+    "reg_off_Temp_data=reg_off_data.rename(columns={\"Maximum temperature (Degree C)\": \"Reg_office_temp\",                               \n",
+    "                                 })\n",
+    "#creating the date as a datetime\n",
     "\n",
-    "# reg_off_Temp_data['Date'] = pd.to_datetime(reg_off_Temp_data[['Year','Month','Day']])\n",
-    "# #collumns to filter\n",
-    "# collist=['Date','Reg_office_temp']\n",
-    "# reg_off_Temp_data = reg_off_Temp_data[collist]\n",
-    "# #set datetime as index\n",
-    "# reg_off_Temp_data = reg_off_Temp_data.set_index('Date')\n",
-    "# reg_off_Temp_data['Reg_office_temp'] = pd.to_numeric(reg_off_Temp_data['Reg_office_temp'], downcast=\"float\",errors='coerce')\n",
-    "# # display(reg_off_Temp_data)\n",
-    "# #plot the data\n",
-    "# # reg_off_plot = reg_off_Temp_data.plot(title=\"Reg_office Temp Plot\");\n",
-    "# # reg_off_plot.set_ylabel('Temp (degC)');\n",
-    "# # reg_off_plot.set_xlabel('Date');\n",
-    "# #interactive plot\n",
-    "# xs_pz = DateScale(min=np.datetime64(py_dtime(1991, 1, 1)))\n",
-    "# ys_pz = LinearScale()\n",
-    "# line_pz_2 = Lines(x=reg_off_Temp_data.index.values, y=reg_off_Temp_data, scales={'x': xs_pz, 'y': ys_pz}, colors=['blue'])\n",
+    "reg_off_Temp_data['Date'] = pd.to_datetime(reg_off_Temp_data[['Year','Month','Day']])\n",
+    "#collumns to filter\n",
+    "collist=['Date','Reg_office_temp']\n",
+    "reg_off_Temp_data = reg_off_Temp_data[collist]\n",
+    "#set datetime as index\n",
+    "reg_off_Temp_data = reg_off_Temp_data.set_index('Date')\n",
+    "reg_off_Temp_data['Reg_office_temp'] = pd.to_numeric(reg_off_Temp_data['Reg_office_temp'], downcast=\"float\",errors='coerce')\n",
+    "# display(reg_off_Temp_data)\n",
+    "#plot the data\n",
+    "# reg_off_plot = reg_off_Temp_data.plot(title=\"Reg_office Temp Plot\");\n",
+    "# reg_off_plot.set_ylabel('Temp (degC)');\n",
+    "# reg_off_plot.set_xlabel('Date');\n",
+    "#interactive plot\n",
+    "xs_pz = DateScale(min=np.datetime64(py_dtime(1991, 1, 1)))\n",
+    "ys_pz = LinearScale()\n",
+    "line_pz_2 = Lines(x=reg_off_Temp_data.index.values, y=reg_off_Temp_data, scales={'x': xs_pz, 'y': ys_pz}, colors=['blue'])\n",
     "\n",
-    "# panzoom = PanZoom(scales={'x': [xs_pz]})\n",
-    "# xax = Axis(scale=xs_pz, label='Date', grids='off')\n",
-    "# yax = Axis(scale=ys_pz, label='Temp (degC)', orientation='vertical', grid_lines='none')\n",
+    "panzoom = PanZoom(scales={'x': [xs_pz]})\n",
+    "xax = Axis(scale=xs_pz, label='Date', grids='off')\n",
+    "yax = Axis(scale=ys_pz, label='Temp (degC)', orientation='vertical', grid_lines='none')\n",
     "\n",
-    "# Figure(marks=[line_pz_2], axes=[xax, yax], interaction=panzoom, title='Melbourne Regional Office Temp')"
+    "Figure(marks=[line_pz_2], axes=[xax, yax], interaction=panzoom, title='Melbourne Regional Office Temp')"
    ]
   },
   {
@@ -270,7 +270,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# UHI = airport_Temp_data['Airport_temp'] -reg_off_Temp_data['Reg_office_temp']"
+    "UHI = airport_Temp_data['Airport_temp'] -reg_off_Temp_data['Reg_office_temp']"
    ]
   },
   {
@@ -294,15 +294,15 @@
     }
    ],
    "source": [
-    "# xs_pz = DateScale(min=np.datetime64(py_dtime(1991, 1, 1)))\n",
-    "# ys_pz = LinearScale()\n",
-    "# line_pz = Lines(x=UHI.index.values, y=UHI, scales={'x': xs_pz, 'y': ys_pz}, colors=['green'])\n",
+    "xs_pz = DateScale(min=np.datetime64(py_dtime(1991, 1, 1)))\n",
+    "ys_pz = LinearScale()\n",
+    "line_pz = Lines(x=UHI.index.values, y=UHI, scales={'x': xs_pz, 'y': ys_pz}, colors=['green'])\n",
     "\n",
-    "# panzoom = PanZoom(scales={'x': [xs_pz]})\n",
-    "# xax = Axis(scale=xs_pz, label='Date', grids='off')\n",
-    "# yax = Axis(scale=ys_pz, label='Temp (degC)', orientation='vertical', grid_lines='none')\n",
+    "panzoom = PanZoom(scales={'x': [xs_pz]})\n",
+    "xax = Axis(scale=xs_pz, label='Date', grids='off')\n",
+    "yax = Axis(scale=ys_pz, label='Temp (degC)', orientation='vertical', grid_lines='none')\n",
     "\n",
-    "# Figure(marks=[line_pz], axes=[xax, yax], interaction=panzoom, title='UHII')"
+    "Figure(marks=[line_pz], axes=[xax, yax], interaction=panzoom, title='UHII')"
    ]
   },
   {
@@ -329,8 +329,8 @@
     }
    ],
    "source": [
-    "# print('THe Maximum recorded UHI from 1990 to 2019')\n",
-    "# UHI.max()"
+    "print('THe Maximum recorded UHI from 1990 to 2019')\n",
+    "UHI.max()"
    ]
   },
   {
@@ -357,8 +357,8 @@
     }
    ],
    "source": [
-    "# print('The Minimum recorded UHI from 1990 to 2019')\n",
-    "# UHI.min()"
+    "print('The Minimum recorded UHI from 1990 to 2019')\n",
+    "UHI.min()"
    ]
   },
   {
@@ -367,9 +367,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from pandas import DataFrame\n",
-    "# UHI_data = DataFrame (UHI,columns=['Temp'])\n",
-    "# UHI_data"
+    "from pandas import DataFrame\n",
+    "UHI_data = DataFrame (UHI,columns=['Temp'])\n",
+    "UHI_data"
    ]
   },
   {
@@ -394,58 +394,58 @@
    ],
    "source": [
     "\n",
-    "# # y1, y2 = np.random.randn(2, 200).cumsum(axis=1) # two simple random walks\n",
+    "# y1, y2 = np.random.randn(2, 200).cumsum(axis=1) # two simple random walks\n",
     "\n",
-    "# fig_layout = Layout()\n",
-    "# # 1. Create the figure object\n",
-    "# time_series_fig = plt.figure(layout=fig_layout,title='Comparision Plot')\n",
-    "# # a dict and pass it to `axxes_options` argument in the marks\n",
-    "# axes_opts = {'x': {'label': 'Date'}, \n",
-    "#              'y': {'label': 'Temp (degC)'}}\n",
-    "# dates= reg_off_Temp_data.index.values\n",
-    "# line = plt.plot(dates,[reg_off_Temp_data,airport_Temp_data, UHI_data], labels=['Regional_office_temp', 'Airport_office_temp', 'UHI_temp'], axes_options=axes_opts,  display_legend=True)\n",
+    "fig_layout = Layout()\n",
+    "# 1. Create the figure object\n",
+    "time_series_fig = plt.figure(layout=fig_layout,title='Comparision Plot')\n",
+    "# a dict and pass it to `axxes_options` argument in the marks\n",
+    "axes_opts = {'x': {'label': 'Date'}, \n",
+    "             'y': {'label': 'Temp (degC)'}}\n",
+    "dates= reg_off_Temp_data.index.values\n",
+    "line = plt.plot(dates,[reg_off_Temp_data,airport_Temp_data, UHI_data], labels=['Regional_office_temp', 'Airport_office_temp', 'UHI_temp'], axes_options=axes_opts,  display_legend=True)\n",
     "\n",
     "\n",
-    "# # create a fast interval selector by passing in the X scale and the line mark on which the selector operates\n",
-    "# intsel = BrushIntervalSelector(marks=[line], scale=line.scales['x'])\n",
-    "# time_series_fig.interaction = intsel # set the interval selector on the figure\n",
+    "# create a fast interval selector by passing in the X scale and the line mark on which the selector operates\n",
+    "intsel = BrushIntervalSelector(marks=[line], scale=line.scales['x'])\n",
+    "time_series_fig.interaction = intsel # set the interval selector on the figure\n",
     "\n",
-    "# scat_fig = plt.figure(layout=fig_layout, \n",
-    "#                       animation_duration=750,\n",
-    "#                       title='Selected Region',\n",
-    "#                       height = 50)\n",
-    "# # set the x and y attributes to the y values of line.y\n",
-    "# scat = plt.plot(dates[len(reg_off_Temp_data)-1000:len(reg_off_Temp_data)],[\n",
-    "#     reg_off_Temp_data[len(reg_off_Temp_data)-1000:len(reg_off_Temp_data)],\n",
-    "#     airport_Temp_data[len(reg_off_Temp_data)-1000:len(reg_off_Temp_data)],\n",
-    "#     UHI_data[len(reg_off_Temp_data)-1000:len(reg_off_Temp_data)]],axes_options=axes_opts, labels=['Regional_office_temp', 'Airport_office_temp', 'UHI_temp'],display_legend=True)\n",
-    "# # display(len(scat.y[0]))\n",
-    "# # define a callback for the interval selector\n",
-    "# def update_scatter(*args):\n",
-    "#     brushing = intsel.brushing\n",
+    "scat_fig = plt.figure(layout=fig_layout, \n",
+    "                      animation_duration=750,\n",
+    "                      title='Selected Region',\n",
+    "                      height = 50)\n",
+    "# set the x and y attributes to the y values of line.y\n",
+    "scat = plt.plot(dates[len(reg_off_Temp_data)-1000:len(reg_off_Temp_data)],[\n",
+    "    reg_off_Temp_data[len(reg_off_Temp_data)-1000:len(reg_off_Temp_data)],\n",
+    "    airport_Temp_data[len(reg_off_Temp_data)-1000:len(reg_off_Temp_data)],\n",
+    "    UHI_data[len(reg_off_Temp_data)-1000:len(reg_off_Temp_data)]],axes_options=axes_opts, labels=['Regional_office_temp', 'Airport_office_temp', 'UHI_temp'],display_legend=True)\n",
+    "# display(len(scat.y[0]))\n",
+    "# define a callback for the interval selector\n",
+    "def update_scatter(*args):\n",
+    "    brushing = intsel.brushing\n",
     "    \n",
-    "#     # update scatter *only* when the interval selector\n",
-    "#     # is not brushing to prevent continuous updates\n",
-    "#     if not brushing:\n",
-    "#         # interval selector is active\n",
-    "#         if line.selected is not None:\n",
-    "#             # get the start and end indices of the interval\n",
-    "#             start_ix, end_ix = line.selected[0], line.selected[-1]\n",
-    "#         else:  # interval selector is *not* active\n",
-    "#             start_ix, end_ix = 0, -1\n",
-    "#         display(start_ix, end_ix)    \n",
-    "#         #update the x and y attributes of the scatter by slicing line.y\n",
-    "#         with scat.hold_sync():\n",
-    "#             display(len(line.y[0][start_ix:end_ix]))\n",
-    "# #             scat.y = line.y[start_ix:end_ix]\n",
-    "#             scat.x, scat.y = line.x[start_ix:end_ix],[line.y[0][start_ix:end_ix],line.y[1][start_ix:end_ix],line.y[2][start_ix:end_ix]]\n",
+    "    # update scatter *only* when the interval selector\n",
+    "    # is not brushing to prevent continuous updates\n",
+    "    if not brushing:\n",
+    "        # interval selector is active\n",
+    "        if line.selected is not None:\n",
+    "            # get the start and end indices of the interval\n",
+    "            start_ix, end_ix = line.selected[0], line.selected[-1]\n",
+    "        else:  # interval selector is *not* active\n",
+    "            start_ix, end_ix = 0, -1\n",
+    "        display(start_ix, end_ix)    \n",
+    "        #update the x and y attributes of the scatter by slicing line.y\n",
+    "        with scat.hold_sync():\n",
+    "            display(len(line.y[0][start_ix:end_ix]))\n",
+    "#             scat.y = line.y[start_ix:end_ix]\n",
+    "            scat.x, scat.y = line.x[start_ix:end_ix],[line.y[0][start_ix:end_ix],line.y[1][start_ix:end_ix],line.y[2][start_ix:end_ix]]\n",
     "\n",
-    "# # register the callback with brushing trait of interval selector\n",
-    "# intsel.observe(update_scatter, 'brushing')\n",
-    "# # help_label = HTML('<div style=\"color: black; font-size: 20px; margin:20px 0px 0px 50px\">\\\n",
-    "# #                   Comparison of the Rural and Urban air temperature with the calculated UHI.</div>\\\n",
-    "# #                   <div style=\"color: black; font-size: 20px; margin:20px 0px 0px 50px\">To zoom into a particular area please click and drag then move the window to analyse the data</div>')\n",
-    "# VBox([time_series_fig, scat_fig])"
+    "# register the callback with brushing trait of interval selector\n",
+    "intsel.observe(update_scatter, 'brushing')\n",
+    "# help_label = HTML('<div style=\"color: black; font-size: 20px; margin:20px 0px 0px 50px\">\\\n",
+    "#                   Comparison of the Rural and Urban air temperature with the calculated UHI.</div>\\\n",
+    "#                   <div style=\"color: black; font-size: 20px; margin:20px 0px 0px 50px\">To zoom into a particular area please click and drag then move the window to analyse the data</div>')\n",
+    "VBox([time_series_fig, scat_fig])"
    ]
   }
  ],
