--- a/notebooks/TSA.ipynb
+++ b/notebooks/TSA.ipynb
@@ -78,13 +78,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "babe279ce7f7475fb0a56d924135c786",
+       "model_id": "2d43b9c440f74974bbb2c962b189e65f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -369,7 +369,7 @@
    "source": [
     "from pandas import DataFrame\n",
     "UHI_data = DataFrame (UHI,columns=['Temp'])\n",
-    "UHI_data"
+    "# UHI_data"
    ]
   },
   {
