--- a/notebooks/TSA.ipynb
+++ b/notebooks/TSA.ipynb
@@ -65,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### MELBOURNE AIRPORT Data plot (zoom and drag)"
+    "### Melbourne Airport Weather Station Dataplot (zoom and drag)"
    ]
   },
   {
@@ -178,7 +178,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### MELBOURNE REGIONAL OFFICE Data plot (zoom and drag)"
+    "### Melbourne CBD Weather Station Dataplot (zoom and drag)"
    ]
   },
   {
@@ -258,7 +258,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### UHII Data plot (zoom and drag)\n",
+    "### UHII Dataplot (zoom and drag)\n",
     "\n",
     "Airport_temp_data - Regional_office_temp_data"
    ]
@@ -364,7 +364,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Comparision plot (click drag and select to zoom)"
+    "## All in one Dataplot (click drag and select to zoom)"
    ]
   },
   {
