--- a/notebooks/TSA.ipynb
+++ b/notebooks/TSA.ipynb
@@ -171,7 +171,7 @@
     "xax = Axis(scale=xs_pz, label='Date', grids='off')\n",
     "yax = Axis(scale=ys_pz, label='Temp (degC)', orientation='vertical', grid_lines='none')\n",
     "\n",
-    "Figure(marks=[line_pz_1], axes=[xax, yax], interaction=panzoom, title='Melbourne Airport Air Temp')"
+    "Figure(marks=[line_pz_1], axes=[xax, yax], interaction=panzoom, title='Melbourne Airport Temp')"
    ]
   },
   {
@@ -251,7 +251,7 @@
     "xax = Axis(scale=xs_pz, label='Date', grids='off')\n",
     "yax = Axis(scale=ys_pz, label='Temp (degC)', orientation='vertical', grid_lines='none')\n",
     "\n",
-    "Figure(marks=[line_pz_2], axes=[xax, yax], interaction=panzoom, title='Melbourne Regional Office Temp')"
+    "Figure(marks=[line_pz_2], axes=[xax, yax], interaction=panzoom, title='Melbourne CBD Temp')"
    ]
   },
   {
@@ -404,7 +404,7 @@
     "\n",
     "fig_layout = Layout()\n",
     "# 1. Create the figure object\n",
-    "time_series_fig = plt.figure(layout=fig_layout,title='Comparision Plot')\n",
+    "time_series_fig = plt.figure(layout=fig_layout,title='All in One Plot')\n",
     "# a dict and pass it to `axxes_options` argument in the marks\n",
     "axes_opts = {'x': {'label': 'Date'}, \n",
     "             'y': {'label': 'Temp (degC)'}}\n",
